[gd_scene load_steps=5 format=2]

[ext_resource path="res://energizermaterial.tres" type="Material" id=1]
[ext_resource path="res://Energizer.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.6
height = 1.2

[sub_resource type="SphereShape" id=2]

[node name="Energizer" type="MeshInstance"]
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )
script = ExtResource( 2 )

[node name="EnergizerHitBox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EnergizerHitBox"]
shape = SubResource( 2 )

[node name="EnergizerTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="body_entered" from="EnergizerHitBox" to="." method="_on_EnergizerHitBox_body_entered"]
[connection signal="timeout" from="EnergizerTimer" to="." method="_on_EnergizerTimer_timeout"]
